[package]
name = "a2kit_macro"
version = "1.0.0"
edition = "2021"
description = "derivable traits for a2kit"
license = "MIT"
keywords = ["disk","image","retro"]
repository = "https://github.com/dfgordon/a2kit_macro"
homepage = "https://github.com/dfgordon/a2kit_macro"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

a2kit_macro_derive = "1.0.0"